[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaedt"
dynamic = ["version"]
description = "High-level Python API for Ansys Electronics Desktop Framework"
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "pytest==8.0.0",
]

[dependency-groups]
tests = [
    "pytest==8.0.0", # latest is 8.4.1
    "pytest-cov==6.0.0", # latest is 6.2.1
]
doc = [
    "ansys-sphinx-theme==1.6.0", # latest is 1.5.3
    "sphinx==7.4.0", # latest is 8.2.3
]

[tool.setuptools.dynamic]
version = {attr = "ansys.aedt.core.__version__"}
